Re-Enables Android and IOS Building and Publishing

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -19,8 +19,8 @@ def testing() {
     stage('Testing') {
         parallel([
             'Main' : { mainUbuntu() },
-            // 'Android': { android() },
-            // 'iOS' : { ios() }
+            'Android': { android() },
+            'iOS' : { ios() }
         ])
     }
 }
