--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -93,6 +93,7 @@ def mainUbuntu() {
                 }
                 echo "$ex error"
             } finally {
+				sh 'docker system df'
                 sh "docker volume rm -f $volumeName"
                 step([$class: 'WsCleanup'])
             }
@@ -127,6 +128,7 @@ def android() {
                 }
                 echo "$ex error"
             } finally {
+				sh 'docker system df'
                 step([$class: 'WsCleanup'])
             }
 
@@ -161,6 +163,8 @@ def ios() {
                 }
                 echo "$ex error"
             } finally {
+				sh 'docker system df'
+				sh 'docker system df'
                 step([$class: 'WsCleanup'])
             }
 
