--- a/vcx/ci/Dockerfile-libvcx
+++ b/vcx/ci/Dockerfile-libvcx
@@ -9,13 +9,14 @@ COPY . /sdk
 RUN mkdir /sdk/vcx/output
 
 ARG test_flag
+ARG features="--features \"pool_tests sovtoken\""
 ENV VCX_TEST_FLAG $test_flag
 ENV PATH=${PATH}:/sdk/vcx/ci/scripts
 
 WORKDIR /sdk/vcx/libvcx
 RUN if [ "$VCX_TEST_FLAG" = "no" ]; \
-	then cargo build --color=never; \
-	else cargo test --color=never -- --test-threads=1; \ 
+	then cargo build ${features} --color=never; \
+	else cargo test ${features} --color=never -- --test-threads=1; \ 
 	fi
 
 RUN cargo update-version
