--- a/vcx/libvcx/Cargo.toml
+++ b/vcx/libvcx/Cargo.toml
@@ -63,9 +63,7 @@ maintainer = "Evernym, Inc."
 copyright = "2018, Evernym Inc."
 depends = "$auto, libindy (=1.5.0~619), libnullpay (=1.5.0~619)"
 extended-description = """\
-This is Evernym's SDK for managing Verifiable Credential eXchange against an Indy network.
-For specific instructions on building see the README in the corresponding github repo
-https://github.com/evernym/sdk"""
+This is Evernym's SDK for managing Verifiable Credential eXchange against an Indy network. For specific instructions on building see the README in the corresponding github repo https://github.com/evernym/sdk"""
 section = "admin"
 revision = "338ad01"
 priority = "optional"
