--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -177,12 +177,12 @@ def fail() {
 
 def buildAndroid(envn) {
     envn.inside {
-        LIBINDY_BRANCH="master"
-        LIBINDY_VERSION="1.5.0"
-        LIBINDY_TAG="653"
-        LIBNULLPAY_BRANCH="master"
-        LIBNULLPAY_VERSION="1.5.0"
-        LIBNULLPAY_TAG="653"
+        LIBINDY_BRANCH="stable"
+        LIBINDY_VERSION="1.6.0"
+        LIBINDY_TAG=""
+        LIBNULLPAY_BRANCH="stable"
+        LIBNULLPAY_VERSION="1.6.0"
+        LIBNULLPAY_TAG=""
 
         ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
         sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBNULLPAY_BRANCH=${LIBNULLPAY_BRANCH} LIBNULLPAY_VERSION=${LIBNULLPAY_VERSION} ./${ANDROID_SCRIPT_PATH} arm"
