--- a/vcx/libvcx/build_scripts/ios/mac/launchd.daemon.build.libvxc.plist
+++ b/vcx/libvcx/build_scripts/ios/mac/launchd.daemon.build.libvxc.plist
@@ -5,7 +5,7 @@
         <key>Label</key>
         <string>local.build_libvcx</string>
         <key>Program</key>
-        <string>/Users/norm/forge/work/code/evernym/sdk/vcx/libvcx/build_scripts/ios/mac/launchd.daemon.build.libvxc.sh</string>
+        <string>/Users/norm/forge/work/code/evernym/sdk-ios/vcx/libvcx/build_scripts/ios/mac/launchd.daemon.build.libvxc.sh</string>
         <key>UserName</key>
         <string>norm</string>
         <key>StartCalendarInterval</key> 
@@ -26,7 +26,7 @@
             <key>RUST_TEST_THREADS</key>
             <string>1</string>
             <key>PYTHONPATH</key>
-            <string>/Users/norm/forge/work/code/evernym/sdk-evernym/vcx/libvcx/vcx-indy-sdk/wrappers/python:/Users/norm/forge/work/code/evernym/sdk-evernym/vcx/wrappers/python3</string>
+            <string>/Users/norm/forge/work/code/evernym/sdk-ios/.macosbuild/vcx-indy-sdk/wrappers/python:/Users/norm/forge/work/code/evernym/sdk-ios/vcx/wrappers/python3</string>
             <key>ANDROID_HOME</key>
             <string>/Users/norm/Library/Android/sdk</string>
             <key>ANDROID_NDK</key>
