--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -4,7 +4,6 @@ def rust
 def vcx_python
 def libindy
 def vcx_nodejs
-def containerNames = ['libvcx', 'nodejs', 'python']
 
 // ******** Artifacts Created ********
 // libvcx_<ver>.deb (Debian Installable Library) ----> published Debian to https://repo.corp.evernym.com/deb/pool/main/libv/libvcx/
@@ -53,15 +52,15 @@ def mainUbuntu() {
 
                 // ******** Build the libvcx base image (runs tests and creates debian automatically) ********
                 def libvcx = docker.build("libvcx", "-f ${libvcxDockerfile} .")
-                sh "docker run --name ${containerNames[0]} --rm libvcx"
+                sh "docker run --name libvcx --rm libvcx"
                
                 // ******** Builds and tests the Node JS Wrapper *******
                 def node = docker.build("node", "-f ${nodeDockerfile} .")
-                sh "docker run --name ${containerNames[1]} --rm node"
+                sh "docker run --name libvcx --rm node"
                 
                 // ******** Builds and tests the Python Wrapper *******
                 def python = docker.build("python", "-f ${pythonDockerfile} .")    
-                sh "docker run --name ${containerNames[2]} --rm python"
+                sh "docker run --name libvcx --rm python"
                 
                 if (env.BRANCH_NAME == "master") {
                     // ******** PUBLISHING (artifacts are in a Docker Volume) ********
