--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -95,6 +95,9 @@ def mainUbuntu() {
                 }
                 echo "$ex error"
             } finally {
+                // sh "docker rm -f ${containerNames[0]} || true"
+                // sh "docker rm -f ${containerNames[1]} || true"
+                // sh "docker rm -f ${containerNames[2]} || true"
 				sh 'docker system df'
                 step([$class: 'WsCleanup'])
             }
