--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -19,14 +19,18 @@ def testing() {
     stage('Testing') {
         parallel([
             'Main' : { mainUbuntu() },
-            'Android': { android() },
-            'iOS' : { ios() }
+            // 'Android': { android() },
+            // 'iOS' : { ios() }
         ])
     }
 }
 
 def getUserUid() {
     return sh(returnStdout: true, script: 'id -u').trim()
+}
+
+def getRevNumber() {
+    sh 'git log --pretty=format:%h -n 1'
 }
 
 def build(name, file, context='.', customParams = '') {
@@ -36,37 +40,41 @@ def build(name, file, context='.', customParams = '') {
 def mainUbuntu() {
     node('ubuntu') {
         stage('Main Build - Ubuntu') {
-            // def volumeName = "vcx-volume"
-            sh "mkdir -p vcx/output"
+            
             def volumeInternalDir = "/sdk/vcx/output"
-            def libindyDockerfile = "vcx/ci/libindy.dockerfile"
-            def libvcxDockerfile = "vcx/ci/libvcx.dockerfile"
-            def pythonDockerfile = "vcx/wrappers/python3/ci/python.dockerfile"
-            def nodeDockerfile = "vcx/wrappers/node/ci/node.dockerfile"
-            def publishDockerfile = "vcx/ci/publish.dockerfile"
+            def revNumber = getRevNumber()
+            def volumeName = "vcx-volume-${revNumber}"
+            def libindyDockerfile = 'vcx/ci/libindy.dockerfile'
+            def libvcxDockerfile = 'vcx/ci/libvcx.dockerfile'
+            def pythonDockerfile = 'vcx/wrappers/python3/ci/python.dockerfile'
+            def nodeDockerfile = 'vcx/wrappers/node/ci/node.dockerfile'
+            def libindyContainerName = "libindy-${revNumber}"
+            def libvcxContainerName = "libvcx-${revNumber}"
+            def pythonContainerName = "python-${revNumber}"
+            def nodeContainerName = "node-${revNumber}"
             try {
                 checkout scm
-                
                 // ******** Build the libindy base image (pulls down dependent debians from sovrin repo, and installs a majority of the dependencies)
                 def libindy = docker.build("libindy", "-f ${libindyDockerfile} .")
 
                 // ******** Build the libvcx base image (runs tests and creates debian automatically) ********
                 def libvcx = docker.build("libvcx", "-f ${libvcxDockerfile} .")
-                sh "docker run --name libvcx --rm libvcx"
+                sh "docker run --name ${libvcxContainerName}--rm -v $volumeName:$volumeInternalDir libvcx"
                
                 // ******** Builds and tests the Node JS Wrapper *******
-                def node = docker.build("node", "-f ${nodeDockerfile} .")
-                sh "docker run --name node --rm node"
+                def node = docker.build("node", "-f ${nodeDockerfile}  .")
+                sh "docker run --name ${nodeContainerName} --rm -v $volumeName:$volumeInternalDir node"
                 
                 // ******** Builds and tests the Python Wrapper *******
                 def python = docker.build("python", "-f ${pythonDockerfile} .")    
-                sh "docker run --name python --rm python"
+                sh "docker run --name ${pythonContainerName} --rm -v $volumeName:$volumeInternalDir python"
                 
                 if (env.BRANCH_NAME == "master") {
                     // ******** PUBLISHING (artifacts are in a Docker Volume) ********
+                    sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
                     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                        def publish = docker.build('publish', "-f ${libvcxDockerfile} .")
-                        publish.inside("--network=host") {
+                        def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
+                        publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
                             // ******** Publish Libvcx Debian to repo ********
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
@@ -79,6 +87,9 @@ def mainUbuntu() {
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
 
                             // ******** Archive with Jenkins ********
+                            sh "mkdir -p vcx/output"
+                            sh "cp $volumeInternalDir/* vcx/output"
+                            sh "ls $volumeInternalDir"
                             archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/*'
 
                         }
@@ -92,15 +103,14 @@ def mainUbuntu() {
                 }
                 echo "$ex error"
             } finally {
-                sh "docker rm -f libvcx || true"
-                sh "docker rm -f node || true"
-                sh "docker rm -f python || true"
 				sh 'docker system df'
+                sh "docker volume rm -f $volumeName"
                 step([$class: 'WsCleanup'])
             }
         }
     }
 }
+
 
 def android() {
     node('ubuntu') {
