--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -18,7 +18,7 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Main' : { mainUbuntu() },
+            'Xenial' : { mainUbuntu() },
             // 'Android': { android() },
             // 'iOS' : { ios() }
         ])
@@ -29,47 +29,55 @@ def getUserUid() {
     return sh(returnStdout: true, script: 'id -u').trim()
 }
 
-def getRevNumber() {
-    sh 'git log --pretty=format:%h -n 1'
-}
 
 def build(name, file, context='.', customParams = '') {
     return docker.build("$name", "${customParams} --build-arg uid=${getUserUid()} -f $file $context")
 }
 
+def getRevNumber() {
+    return sh(returnStdout: true, script: 'git log --pretty=format:%h -n 1')
+}
+
 def mainUbuntu() {
     node('ubuntu') {
-        stage('Main Build - Ubuntu') {
-            
-            def volumeInternalDir = "/sdk/vcx/output"
-            def revNumber = getRevNumber()
-            def volumeName = "vcx-volume-${revNumber}"
-            def libindyDockerfile = 'vcx/ci/libindy.dockerfile'
-            def libvcxDockerfile = 'vcx/ci/libvcx.dockerfile'
-            def pythonDockerfile = 'vcx/wrappers/python3/ci/python.dockerfile'
-            def nodeDockerfile = 'vcx/wrappers/node/ci/node.dockerfile'
-            def libindyContainerName = "libindy-${revNumber}"
-            def libvcxContainerName = "libvcx-${revNumber}"
-            def pythonContainerName = "python-${revNumber}"
-            def nodeContainerName = "node-${revNumber}"
-            try {
-                checkout scm
+ 
+        checkout scm
+
+        def volumeInternalDir = "/sdk/vcx/output"
+        def revNumber = getRevNumber()
+        def volumeName = "vcx-volume-${revNumber}"
+        def libindyDockerfile = 'vcx/ci/libindy.dockerfile'
+        def libvcxDockerfile = 'vcx/ci/libvcx.dockerfile'
+        def pythonDockerfile = 'vcx/wrappers/python3/ci/python.dockerfile'
+        def nodeDockerfile = 'vcx/wrappers/node/ci/node.dockerfile'
+
+        try {
+            stage('Build Libindy Image') {
                 // ******** Build the libindy base image (pulls down dependent debians from sovrin repo, and installs a majority of the dependencies)
                 def libindy = docker.build("libindy", "-f ${libindyDockerfile} .")
-
+            }
+            
+            stage('Build Libvcx Image, Test, Copy Debian to Volume') {
                 // ******** Build the libvcx base image (runs tests and creates debian automatically) ********
-                def libvcx = docker.build("libvcx", "-f ${libvcxDockerfile} .")
-                sh "docker run --name ${libvcxContainerName}--rm -v $volumeName:$volumeInternalDir libvcx"
-               
+                def libvcx = docker.build("libvcx", "--build-arg output_dir=${volumeInternalDir} -f ${libvcxDockerfile} .")
+                libvcx.run("-v $volumeName:$volumeInternalDir")
+            }
+
+            stage('Build Node Image, Test, Copy Package to Volume') {
                 // ******** Builds and tests the Node JS Wrapper *******
                 def node = docker.build("node", "-f ${nodeDockerfile}  .")
-                sh "docker run --name ${nodeContainerName} --rm -v $volumeName:$volumeInternalDir node"
-                
+                node.runWith("-v $volumeName:$volumeInternalDir") {}
+            }
+
+            stage('Build Python Image, Test, Copy Package to Volume') {
                 // ******** Builds and tests the Python Wrapper *******
-                def python = docker.build("python", "-f ${pythonDockerfile} .")    
-                sh "docker run --name ${pythonContainerName} --rm -v $volumeName:$volumeInternalDir python"
-                
-                if (env.BRANCH_NAME == "master") {
+                def python = docker.build("python", "-f ${pythonDockerfile} .")
+                python.runWith("-v $volumeName:$volumeInternalDir")
+            }
+
+            // sh "docker run --rm -v $volumeName:$volumeInternalDir ubuntu:16.04 sh -c \'ls ${volumeInternalDir}\''
+            if (env.BRANCH_NAME == "master") {
+                stage('Publish') {
                     // ******** PUBLISHING (artifacts are in a Docker Volume) ********
                     sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
                     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
@@ -81,7 +89,7 @@ def mainUbuntu() {
                             
                             // ******** Publish Npm Package to filely repo ********
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
-                 
+                
                             // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
@@ -95,19 +103,18 @@ def mainUbuntu() {
                         }
                     }
                 }
-
-            } catch (Exception ex) {
-                currentBuild.result = "FAILED"
-                if (env.BRANCH_NAME == "master") {
-                    fail()
-                }
-                echo "$ex error"
-            } finally {
-				sh 'docker system df'
-                sh "docker volume rm -f $volumeName"
-                step([$class: 'WsCleanup'])
             }
-        }
+        } catch (Exception ex) {
+            currentBuild.result = "FAILED"
+            if (env.BRANCH_NAME == "master") {
+                fail()
+            }
+            echo "$ex error"
+        } finally {
+            sh 'docker system df'
+            sh "docker volume rm -f $volumeName"
+            step([$class: 'WsCleanup'])
+        }   
     }
 }
 
