--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -3,6 +3,7 @@
 def rust
 def vcx_python
 def libindy
+def libvcx
 def vcx_nodejs
 
 // ******** Artifacts Created ********
@@ -39,67 +40,79 @@ def getRevNumber() {
 }
 
 def mainUbuntu() {
-    node('ubuntu') {
+    node('ubuntu-14') {
  
         checkout scm
 
         def volumeInternalDir = "/sdk/vcx/output"
         def revNumber = getRevNumber()
-        def volumeName = "vcx-volume-${revNumber}"
+        def volumeName = "vcx-volume1-${revNumber}"
         def libindyDockerfile = 'vcx/ci/libindy.dockerfile'
         def libvcxDockerfile = 'vcx/ci/libvcx.dockerfile'
         def pythonDockerfile = 'vcx/wrappers/python3/ci/python.dockerfile'
         def nodeDockerfile = 'vcx/wrappers/node/ci/node.dockerfile'
 
         try {
-            stage('Build Libindy Image') {
-                // ******** Build the libindy base image (pulls down dependent debians from sovrin repo, and installs a majority of the dependencies)
-                def libindy = docker.build("libindy", "-f ${libindyDockerfile} .")
-            }
-            
-            stage('Build Libvcx Image, Test, Copy Debian to Volume') {
-                // ******** Build the libvcx base image (runs tests and creates debian automatically) ********
-                def libvcx = docker.build("libvcx", "--build-arg output_dir=${volumeInternalDir} -f ${libvcxDockerfile} .")
-                libvcx.run("-v $volumeName:$volumeInternalDir")
-            }
-
-            stage('Build Node Image, Test, Copy Package to Volume') {
-                // ******** Builds and tests the Node JS Wrapper *******
-                def node = docker.build("node", "-f ${nodeDockerfile}  .")
-                node.runWith("-v $volumeName:$volumeInternalDir") {}
-            }
-
-            stage('Build Python Image, Test, Copy Package to Volume') {
-                // ******** Builds and tests the Python Wrapper *******
-                def python = docker.build("python", "-f ${pythonDockerfile} .")
-                python.runWith("-v $volumeName:$volumeInternalDir")
-            }
-
-            // sh "docker run --rm -v $volumeName:$volumeInternalDir ubuntu:16.04 sh -c \'ls ${volumeInternalDir}\''
-            if (env.BRANCH_NAME == "master") {
-                stage('Publish') {
-                    // ******** PUBLISHING (artifacts are in a Docker Volume) ********
-                    sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
-                    withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                        def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
-                        publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
-                            // ******** Publish Libvcx Debian to repo ********
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
-                            
-                            // ******** Publish Npm Package to filely repo ********
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
+            stages {
+                stage('Build Libindy Image') {
+                    // ******** Build the libindy base image (pulls down dependent debians from sovrin repo, and installs a majority of the dependencies)
+                    def libindy = docker.build("libindy", "-f ${libindyDockerfile} .")
+                }
                 
-                            // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                stage('Build Libvcx Image, Test, Copy Debian to Volume') {
+                    // ******** Build the libvcx base image (runs tests and creates debian automatically) ********
+                    def libvcx = docker.build("libvcx", "--build-arg output_dir=${volumeInternalDir} -f ${libvcxDockerfile} .")
+                    libvcx.run("-v $volumeName:$volumeInternalDir")
+                    libvcx.stop()
+                }
 
-                            // ******** Archive with Jenkins ********
-                            sh "mkdir -p vcx/output"
-                            sh "cp $volumeInternalDir/* vcx/output"
-                            sh "ls $volumeInternalDir"
-                            archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/*'
+                stage('Build Node Image, Test, Copy Package to Volume') {
+                    // ******** Builds and tests the Node JS Wrapper *******
+                    def node = docker.build("node", "-f ${nodeDockerfile}  .")
+                    node.run("-v $volumeName:$volumeInternalDir")
+                    node.stop()
+                }
 
+                stage('Build Python Image, Test, Copy Package to Volume') {
+                    // ******** Builds and tests the Python Wrapper *******
+                    def python = docker.build("python", "-f ${pythonDockerfile} .")
+                    python.run("-v $volumeName:$volumeInternalDir")
+                    python.stop()
+                }
+
+                stage('Checking Volume') {
+                    def libindy = docker.build("libindy", "-f ${libindyDockerfile} .")
+                    libindy.inside("-v $volumeName:$volumeInternalDir") {
+                        sh "ls -al $volumeInternalDir"
+                    }
+                }
+
+                // sh "docker run --rm -v $volumeName:$volumeInternalDir ubuntu:16.04 sh -c \'ls ${volumeInternalDir}\''
+                if (env.BRANCH_NAME == "master") {
+                    stage('Publish') {
+                        // ******** PUBLISHING (artifacts are in a Docker Volume) ********
+                        sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
+                        withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
+                            def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
+                            publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
+                                // ******** Publish Libvcx Debian to repo ********
+                                sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                                sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                                
+                                // ******** Publish Npm Package to filely repo ********
+                                sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
+                    
+                                // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
+                                sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                                sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+
+                                // ******** Archive with Jenkins ********
+                                sh "mkdir -p vcx/output"
+                                sh "cp $volumeInternalDir/* vcx/output"
+                                sh "ls $volumeInternalDir"
+                                archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/*'
+
+                            }
                         }
                     }
                 }
@@ -112,7 +125,6 @@ def mainUbuntu() {
             echo "$ex error"
         } finally {
             sh 'docker system df'
-            sh "docker volume rm -f $volumeName"
             step([$class: 'WsCleanup'])
         }   
     }
