took out libnullpay reference

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -18,9 +18,9 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Main' : { mainUbuntu() },
+            //'Main' : { mainUbuntu() },
             'Android': { android() },
-            'iOS' : { ios() }
+            //'iOS' : { ios() }
         ])
     }
 }
