changed docker build

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -110,7 +110,7 @@ def android() {
 
                 //Build android docker image
                 sh 'ls'
-                android = build('android', '-f vcx/ci/android.dockerfile .')
+                android = build('android', 'vcx/ci/android.dockerfile', 'vcx')
                 
                 //Build .so files for arm64, x86, and arm
                 buildAndroid(android)
