--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -185,6 +185,9 @@ def buildAndroid(envn) {
         LIBINDY_BRANCH="stable"
         LIBINDY_VERSION="1.6.1"
         LIBINDY_TAG=""
+        LIBNULLPAY_BRANCH="stable"
+        LIBNULLPAY_VERSION="1.6.1"
+        LIBNULLPAY_TAG=""
 
         sh 'sudo ./vcx/ci/scripts/installCert.sh'
         sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBNULLPAY_BRANCH=${LIBNULLPAY_BRANCH} LIBNULLPAY_VERSION=${LIBNULLPAY_VERSION} ./${ANDROID_SCRIPT_PATH} arm64"
