Modifies Node Test

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -67,14 +67,14 @@ def mainUbuntu() {
                 // ******** Build the libvcx base image (runs tests and creates debian automatically) ********
                 
                 def uid= sh(returnStdout: true, script: 'id -u').trim()
-                // def libvcx = docker.build("libvcx", "--build-arg uid=${uid} -f ${libvcxDockerfile} .")
+                def libvcx = docker.build("libvcx", "--build-arg uid=${uid} -f ${libvcxDockerfile} .")
                 // libvcx.inside() {
                 //     sh 'vcx/ci/scripts/package.sh'
                 //     sh 'ls -al vcx/libvcx/target/debian'
                 // }
                 def node = docker.build('node', "--build-arg uid=${uid} -f ${nodeDockerfile} .")
                 node.inside() {
-                    sh 'cd vcx/wrappers/node/ && ls -al && npm run compile && npm test'
+                    sh 'cd vcx/wrappers/node/ci/test.sh'
                 }
             }
 
