--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -105,7 +105,7 @@ def mainUbuntu() {
                         libvcx.inside("--network=host") {
                 //             // ******** Publish Libvcx Debian to repo ********
                             sh "vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                            sh "vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
                             
                 //             // ******** Publish Npm Package to filely repo ********
                 //             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
@@ -118,9 +118,9 @@ def mainUbuntu() {
                 //             sh "mkdir -p vcx/output"
                 //             sh "cp $volumeInternalDir/* vcx/output"
                 //             sh "ls $volumeInternalDir"
-                //             archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/*'
+                            archiveArtifacts allowEmptyArchive: true, artifacts: 'output/*'
 
-                //         }
+                        }
                     }
                 }
             // }
