commented out xenial and android build

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -19,8 +19,8 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Xenial' : { mainUbuntu() },
-            'Android': { android() },
+            //'Xenial' : { mainUbuntu() },
+            //'Android': { android() },
             'iOS' : { ios() }
         ])
     }
